--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="figma-plugin-boilerplate.js" defer></script>
   <link rel="stylesheet" href="figma-icons.css">
+  <link rel="stylesheet" href="assets/figma-plugin-boilerplate.css">
   <style>
     body {
       width: 100vw;
