Add panel styling and dragging greatness

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <script src="figma-plugin-boilerplate.js" defer></script>
   <link rel="stylesheet" href="figma-icons.css">
   <link rel="stylesheet" href="assets/figma-plugin-boilerplate.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
       width: 100vw;
