--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Figma Plugin Preview</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="figma-plugin-boilerplate.js" defer></script>
+  <script src="figma-plugin-panel.js" defer></script>
+  <script src="figma-plugin-boilerplate-ui.js" defer></script>
   <link rel="stylesheet" href="figma-icons.css">
-  <link rel="stylesheet" href="assets/figma-plugin-boilerplate.css">
+  <link rel="stylesheet" href="figma-plugin-panel.css">
+  <link rel="stylesheet" href="figma-plugin-boilerplate-ui.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -16,10 +18,39 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      font: normal normal 400 14px/20px Roboto, sans-serif;
+    }
+
+    .demo-button {
+      display: block;
+      text-align: center;
+      flex-shrink: 0;
+      height: 30px;
+      line-height: 28px;
+      max-width: 180px;
+      padding: 0 11px;
+      color: #444;
+      font-weight: 400;
+      background-color: transparent;
+      box-sizing: border-box;
+      border: 1px solid #d4d4d4;
+      border-radius: 3px;
+      outline: none;
+      color: #fff;
+      background-color: #30c2ff;
+      border-color: #30c2ff;
+    }
+
+    .demo-button:active {
+      background-color: #30afe6;
+    }
+
+    .demo-button:focus {
+        border: 2px solid rgba(0, 0, 0, 0.2);
     }
   </style>
 </head>
 <body>
-  
+  <button class="demo-button" onclick="javascript:window.examplePlugin.showUI()">Show UI</button>
 </body>
 </html>
